FIX | rounded corners on IOS

--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -127,6 +127,8 @@
   width: 100%;
   transition: 0.3s ease-in-out;
   padding: 0 0 5px 0;
+  -webkit-border-radius:0;
+  border-radius:0;
 }
 
  .error {
